@@ -41,6 +41,9 @@ BUGFIXES:
   ZOOKEEPER-750. move maven artifacts into "dist-maven" subdir of the
   release (package target) (phunt via henryr)
 
+  ZOOKEEPER-758. zkpython segfaults on invalid acl with missing key
+  (Kapil Thangavelu via henryr)
+
 IMPROVEMENTS:
   ZOOKEEPER-724. Improve junit test integration - log harness information 
   (phunt via mahadev)
